# nebula

./: 0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
docs/: 0.bootstrap.js  bootstrap.js  index.html
res/crates/attr/: Cargo.toml
res/crates/proc/: Cargo.toml
src/: lib.rs
src/sim/: mod.rs
src/sim/nebula/: board.rs  cell.rs  mod.rs
src/sim/pond/: board.rs  cell.rs  mod.rs
src/wasm/: mod.rs
web/: bootstrap.js  colour.js  drawing.js  index.html  index.js  package-lock.json  package.json
web/.bin/: create-wasm-app.js
