[package]
name = "nebula"
version = "0.1.1"
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
edition = "2018"
repository = "https://github.com/FreddyWordingham/nebula"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arctk-attr = "0.2.*"
arctk-proc = "0.2.*"

console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.*"
ndarray = "0.13.*"
wasm-bindgen = "0.2.*"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.*"

[profile.release]
opt-level = 0
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]
