[package]
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
name = "attr"
version = "0.0.0"
description = "Support attribute macro library."
repository = "https://github.com/FreddyWordingham/pond"
readme = "../../../README.md"
keywords = ["support"]
catagories = []
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc = { path = "../proc" }

proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = { version = "1.0.*", features = ["full"] }
